fixed spacing issue for mobile view

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     color: red;
 }
 
+.inventory-list-container {
+    margin-top: 1rem;
+}
+
 .center_button {
     text-align: center;
 }
